[package]
name = "bronzewarden"
version = "0.1.0"
edition = "2021"
description = "A minimal Bitwarden-compatible vault client in Rust"
license = "MIT"
repository = "https://github.com/1jehuang/bronzewarden"
keywords = ["bitwarden", "vault", "password-manager", "credentials"]
categories = ["authentication", "command-line-utilities"]

[[bin]]
name = "bronzewarden"
path = "src/main.rs"

[lib]
name = "bronzewarden"
path = "src/lib.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

# Encoding
base64 = "0.22"

# UUID generation (for device ID)
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Password input
rpassword = "7"

# Error handling
anyhow = "1"
thiserror = "2"

# Directories for config storage
dirs = "5"

# URL matching
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
